# varagity

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Dockerfile.api  README.md  docker-compose.yml  main.py  mkdocs.yml  pyproject.toml  spec.md
.github/workflows/: ci.yml
data/eval/: golden_qa.jsonl
data/eval/ocr_truth/: breakwater_survey.txt  moorhen_dredging_memo.txt
golden-docs/: api.md  architecture.md  data-model.md  index.md  openapi.json  pipelines.md  runbook.md
golden-docs/adr/: ADR-001-pgvector-over-qdrant.md  ADR-002-infinity-over-fastembed.md  ADR-003-vertical-build-and-ops-choices.md  ADR-004-ocr-engine-choice.md  ADR-005-web-stack-and-api.md  ADR-006-reranking-wired.md  ADR-007-observability-stack.md  ADR-008-chunking-default.md  ADR-009-modality-expansion.md  ADR-010-document-page-preview.md  ADR-011-chat-engine-condense.md  ADR-012-relative-path-uploads.md  ADR-013-corpus-gauges-vs-counters.md  ADR-014-bun-package-manager.md  ADR-015-codebase-map.md  ADR-016-hyde-retrieval.md  index.md
golden-docs/css/: neoteroi-oad.css  neoteroi.css  varagity.css
golden-docs/reference/: api.md  chat.md  chunking.md  cli.md  config.md  context.md  eval.md  generation.md  index.md  ingest.md  models.md  observability.md  pipeline.md  preview.md  retrieval.md  stores.md
observability/grafana/dashboards/: infra.json  ingestion.json  query.json
observability/prometheus/: prometheus.yml
scripts/: export_openapi.py  smoke.sh
tests/: conftest.py  sse.py
tests/e2e/: test_query_pipeline.py
tests/fixtures/conversations/: array-neighbours.json  aurora-to-tidal-shift.json  commissioning-dates.json  glass-eel-leadership.json  grid-power-elliptical.json  kelp-corridor-length.json  leadership-elliptical.json  observatory-shift.json  pelican-shift.json  reactor-backup.json
tests/fixtures/corpus/: aurora_station.md  glossary.md  gullwing_ferry_manual.docx  petrel_turbine_briefing.pptx  quayside_inventory.xlsx  seagrass_survey.html  tidal_grid.txt
tests/fixtures/formats/: gullwing_ferry_manual.odt  harbor_pilotage.csv  mooring_notice.xhtml  petrel_turbine_briefing.odp  quayside_inventory.ods  tide_tables.rst
tests/integration/: test_api_corpus.py  test_api_persistence.py  test_bm25_store.py  test_office_web_ingest.py  test_pdf_ocr.py  test_vector_store.py
tests/unit/: test_answer.py  test_answer_stream.py  test_api_chat.py  test_api_conversations.py  test_api_documents.py  test_api_groups.py  test_api_ingest.py  test_api_preview.py  test_api_settings.py  test_api_system.py  test_app_settings_store.py  test_bm25_store.py  test_chat_engines.py  test_chunking.py  test_cli.py  test_cli_eval.py  test_config.py  test_contextual.py  test_conversation_store.py  test_corpus_gauges.py  test_dashboards.py  test_discovery.py  test_embeddings.py  test_eval_chat.py  test_eval_datasets.py  test_eval_metrics.py  test_hyde.py  test_llm.py  test_loader.py  test_logging_setup.py  test_metrics.py  test_migrate.py  test_model_registry.py  test_openapi_snapshot.py  test_parsers_docling.py  test_parsers_image.py  test_parsers_pdf.py  test_parsers_text.py  test_paths.py  test_pipeline_flows.py  (+10 more)
varagity/: __init__.py  config.py  logging_setup.py  paths.py  tokens.py
varagity/api/: __init__.py  deps.py  ingest_runner.py  main.py  runtime_settings.py  schemas.py  streaming.py
varagity/api/routes/: __init__.py  chat.py  conversations.py  documents.py  groups.py  ingest.py  metrics.py  settings.py  system.py
varagity/chat/: __init__.py  base.py  condense.py  prompts.py  simple.py
varagity/chunking/: __init__.py  base.py  docling_hybrid.py  markdown_aware.py  recursive_character.py  semantic.py  token_based.py
varagity/cli/: __init__.py  app.py
varagity/context/: __init__.py  contextual.py
varagity/debug/: __init__.py  show.py
varagity/eval/: __init__.py  containers.py  datasets.py  evaluate.py  ocr_benchmark.py
varagity/generation/: __init__.py  answer.py
varagity/ingest/: __init__.py  discovery.py  loader.py
varagity/ingest/parsers/: __init__.py  base.py  docling_base.py  image.py  office.py  pdf.py  text.py  web.py
varagity/models/: __init__.py  embeddings.py  llm.py  registry.py  rerank.py  stream.py
varagity/observability/: __init__.py  corpus.py  metrics.py
varagity/pipeline/: __init__.py  eval_flow.py  ingest_flow.py  query_flow.py
varagity/preview/: __init__.py  convert.py  locate.py  normalize.py  render.py  source.py
varagity/retrieval/: __init__.py  base.py  bm25.py  hybrid.py  hyde.py  reranked.py  semantic.py
varagity/stores/: __init__.py  app_settings_store.py  base.py  bm25_store.py  conversation_store.py  migrate.py  records.py  schema.sql  vector_store.py
varagity/stores/migrations/: 001_conversations.sql  002_app_settings.sql  003_condensed_query.sql  004_message_engine.sql  005_conversation_groups.sql
web/: .gitignore  Dockerfile  README.md  eslint.config.mjs  next.config.ts  package.json  playwright.config.ts  pnpm-lock.yaml  vitest.config.ts
web/app/: globals.css  layout.tsx  page.tsx
web/app/corpus/: page.tsx
web/app/map/: page.tsx
web/components/: AppearanceApplier.tsx  Sidebar.tsx  ThemeToggle.tsx  query-bus-bridge.tsx  query-provider.tsx  theme-provider.tsx
web/components/chat/: Citations.tsx  Composer.tsx  Conversation.tsx  Markdown.tsx  MessageList.tsx  ReasoningTrace.tsx  use-chat.ts
web/e2e/: a11y.spec.ts  chat-flow.spec.ts  groups.spec.ts  helpers.ts  keyboard.spec.ts  map.spec.ts  preview.spec.ts  smoke.spec.ts
web/hooks/: use-debounced-value.ts  use-mount-effect.ts
web/lib/: api.ts  chat-reducer.ts  citations.ts  codebase-map.data.ts  codebase-map.layout.json  codebase-map.layout.ts  codebase-map.ts  conversation-groups.ts  conversations-bus.ts  corpus-tree.ts  display-prefs.ts  dropped-files.ts  errors.ts  evidence.ts  groups-bus.ts  highlight.ts  ingest-reducer.ts  map-layout.ts  palette.ts  preview.ts  queries.ts  selection.ts  session-usage.ts  settings-bus.ts  settings-form.ts  stage.ts  trace.ts  types.ts  ui-bus.ts  upload.ts  use-upload.ts  window-event-bus.ts
(+64 files in other folders)
