[project]
name = "varagity"
version = "0.1.0"
description = "Full-stack RAG application with Contextual Retrieval — self-hosted, GPU-accelerated"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # PDF extraction (structure-aware markdown) + OCR fallback. The easyocr
    # extra is required since docling 2.98 split OCR engines out of the
    # standard bundle; tesseract needs only the system binary (Dockerfile).
    "docling[easyocr]>=2.112.0",
    "elasticsearch>=9,<10",  # client major must match the ES server major (9.x ↔ 9.x)
    "httpx>=0.28.1",
    "langchain-core>=1.4.9",
    "langchain-text-splitters>=1.1.2",
    "openai>=2.45.0",
    "pgvector>=0.5.0",
    "psycopg[binary]>=3.3.4",
    "pydantic-settings>=2.14.2",
    "rich>=15.0.0",
    "tenacity>=9.1.4",
    "tiktoken>=0.13.0",
    # Declared directly (not just via docling[easyocr]) so the [tool.uv.sources]
    # CPU-wheel pin below applies — uv sources only bind to declared deps.
    "torch>=2.6",
    "torchvision>=0.21",
]

[dependency-groups]
dev = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.6",
    "mkdocstrings[python]>=1.0.4",
    "mypy>=2.2.0",
    "pre-commit>=4.6.0",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
    "respx>=0.23.1",
    "ruff>=0.15.21",
    "testcontainers[elasticsearch,postgres]>=4.14.2",
]

# v1 OCR runs on CPU (plan decision #10), so pull CPU-only torch wheels for
# docling/EasyOCR — the default CUDA wheels add multiple GB to the venv/image
# for GPU inference the app container can't use anyway.
[tool.uv.sources]
torch = { index = "pytorch-cpu" }
torchvision = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.ruff]
line-length = 100

[tool.ruff.lint]
# E/W/F = pycodestyle + Pyflakes (flake8 parity), I = isort, B = bugbear,
# SIM = simplify, UP = pyupgrade, D = pydocstyle (docstring enforcement).
select = ["E", "W", "F", "I", "B", "SIM", "UP", "D"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
# Tests don't need docstrings on every function/module.
"tests/**" = ["D1"]

[tool.mypy]
python_version = "3.12"
disallow_untyped_defs = true
warn_return_any = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: needs real backing services via testcontainers (Docker)",
    "e2e: full ingest→query pipeline over the fixtures corpus (Docker)",
]
# Default run is unit-only; select the other layers with `-m integration` / `-m e2e`.
# No coverage floor yet — enforced in Phase 10.
addopts = "--cov=varagity --cov-report=term-missing -m 'not integration and not e2e'"
