[project]
name = "varagity"
version = "0.1.0"
description = "Full-stack RAG application with Contextual Retrieval — self-hosted, GPU-accelerated"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # PDF extraction (structure-aware markdown) + OCR fallback. The easyocr
    # extra is required since docling 2.98 split OCR engines out of the
    # standard bundle; tesseract needs only the system binary (Dockerfile).
    "docling[easyocr]>=2.112.0",
    "elasticsearch>=9,<10", # client major must match the ES server major (9.x ↔ 9.x)
    # Native SSE (EventSourceResponse landed in 0.135) — v2 plan decision #7.
    "fastapi>=0.135",
    "httpx>=0.28.1",
    "langchain-core>=1.4.9",
    "langchain-text-splitters>=1.1.2",
    "openai>=2.45.0",
    "pgvector>=0.5.0",
    # Page-preview locate/render (varagity/preview, ADR-010): declared
    # directly so the feature survives docling changing its backend deps —
    # both are already in the resolved set transitively (no image growth).
    "pillow>=11",
    "prefect>=3,<4",
    # In-app pipeline metrics exposed at GET /metrics (spec_v2 §6, v2 Phase 7).
    "prometheus-client>=0.21",
    "psycopg[binary]>=3.3.4",
    "pydantic-settings>=2.14.2",
    "pypdfium2>=5.11,<6",  # page-preview locate/render (see the pillow note above)
    # Multipart form parsing for the Phase 8 upload route (FastAPI requires it
    # at import time for File/UploadFile parameters).
    "python-multipart>=0.0.20",
    "rich>=15.0.0",
    "tenacity>=9.1.4",
    "tiktoken>=0.13.0",
    # Declared directly (not just via docling[easyocr]) so the [tool.uv.sources]
    # CPU-wheel pin below applies — uv sources only bind to declared deps.
    "torch>=2.6",
    "torchvision>=0.21",
    "uvicorn[standard]>=0.30",
]

[dependency-groups]
dev = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.6",
    "mkdocstrings[python]>=1.0.4",
    "mypy>=2.2.0",
    "neoteroi-mkdocs>=1.2.0",
    "pre-commit>=4.6.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.0",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
    "respx>=0.23.1",
    "ruff>=0.15.21",
    { include-group = "eval" },
]
# What `main.py eval` needs beyond the runtime deps (Phase 9): ephemeral
# stores + OCR error metrics. Shared into dev (tests use the same
# containers); `uv run --group eval main.py eval` works without dev.
eval = [
    "jiwer>=3.1.0",
    "testcontainers[elasticsearch,postgres]>=4.14.2",
]

# v1 OCR runs on CPU (plan decision #10), so pull CPU-only torch wheels for
# docling/EasyOCR — the default CUDA wheels add multiple GB to the venv/image
# for GPU inference the app container can't use anyway.
[tool.uv.sources]
torch = { index = "pytorch-cpu" }
torchvision = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.ruff]
line-length = 100

[tool.ruff.lint]
# E/W/F = pycodestyle + Pyflakes (flake8 parity), I = isort, B = bugbear,
# SIM = simplify, UP = pyupgrade, D = pydocstyle (docstring enforcement).
select = ["E", "W", "F", "I", "B", "SIM", "UP", "D"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
# Tests don't need docstrings on every function/module.
"tests/**" = ["D1"]

[tool.mypy]
python_version = "3.12"
disallow_untyped_defs = true
warn_return_any = true

[[tool.mypy.overrides]]
# Ships no py.typed marker; imported (deferred) by varagity.eval.containers.
module = ["testcontainers.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# Ships no py.typed marker; the varagity.preview pdfium wrappers keep the
# untyped surface contained behind their own typed signatures.
module = ["pypdfium2.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
# Async tests (the httpx.AsyncClient API suites) run under pytest-asyncio
# without per-test markers.
asyncio_mode = "auto"
markers = [
    "integration: needs real backing services via testcontainers (Docker)",
    "e2e: full ingest→query pipeline over the fixtures corpus (Docker)",
]
# Default run is unit-only; select the other layers with `-m integration` / `-m e2e`.
addopts = "--cov=varagity --cov-report=term-missing -m 'not integration and not e2e'"

[tool.coverage.report]
# The spec §15.3 floor; ratchet upward as coverage grows (unit suite ~87%).
fail_under = 80
